# Schreiberly

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml  requirements.txt
docs/: TODOS.md  design-schreibarrly-20260420.md
schreibarrly/: __main__.py  app.py  config.py  context.py  db.py  ollama.py  startup.py
tests/: test_config.py  test_context.py  test_db.py  test_ollama.py  test_startup.py
